crates/lang/tests/ui/contract/fail/message-selector-invalid-type-01.rs
use ink_lang as ink;

#[ink::contract]
mod contract {
    #[ink(storage)]
    pub struct Contract {}

    impl Contract {
        #[ink(constructor)]
        pub fn constructor() -> Self {
            Self {}
        }

        #[ink(message, selector = "0xC0DECAFE")]
        pub fn message(&self) {}
    }
}

fn main() {}
