crates/lang/tests/ui/contract/fail/message-selector-invalid-type-01.stderr
error: #[ink(selector = ..)] attributes with string inputs are deprecated (except for the wildcard selector "_"). use an integer instead, e.g. #[ink(selector = 1)] or #[ink(selector = 0xC0DECAFE)].
  --> tests/ui/contract/fail/message-selector-invalid-type-01.rs:14:24
   |
14 |         #[ink(message, selector = "0xC0DECAFE")]
   |                        ^^^^^^^^^^^^^^^^^^^^^^^
